fix submenu padding & z-index

--- a/app/styles/blocks/content.styl
+++ b/app/styles/blocks/content.styl
@@ -1,6 +1,8 @@
 #content
 	width 700px
 	float right
+	position relative
+	z-index 10
 
 	h1
 		color $blue
