--- a/app/styles/blocks/sub-menu.styl
+++ b/app/styles/blocks/sub-menu.styl
@@ -55,4 +55,5 @@
 	color #fff
 	font-weight 700
 	position relative
-	padding 6px 0 6px 10px
+	padding 6px
+	padding-bottom 10px
